--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -52,11 +52,11 @@ section {
   box-sizing: border-box;
 }
 
-.about {
+.about  {
   max-width: 1440px;
   width: 100%;
   margin: 0 auto 0 auto;
-  padding: 64px 134px 62px 93px;
+  padding: 134px 62px 93px 64px;
   background-color: #fff;       
   color: #000;                  
 }
@@ -65,18 +65,18 @@ section {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 40px;
-  align-items: start;
+  align-items: stretch; /* ← одинаковая высота колонок */
+  width: 100%;
 }
 
 .about-content {
   display: flex;
   flex-direction: column;
   justify-content: space-between; 
-  height: 100%; 
 } 
 
-.about-image {
-  display: flex;           
+.about-image {  
+  height: 100%;       
 }
 
 .about-image img {
@@ -124,6 +124,52 @@ section {
 .about-btn:hover {
   background-color: rgb(202, 170, 88);
   color: rgb(68, 21, 21);
+}
+
+@media (max-width: 1024px) {
+
+  .about {
+    padding: 50px 60px;
+  }
+
+  .about-inner {
+    gap: 30px;
+  }
+
+  .about-title {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 46px;
+  line-height: 50px;
+  margin: 10px 0 10px 0;
+}
+
+.about-content p,
+.about-content span {
+  margin-bottom: 30px;
+  display: block;
+  font-size: 22px;
+}
+
+  .about-content {
+    justify-content: space-between;
+  }
+
+  .about-image {
+    height: 100%;
+  }
+
+  .about-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .about-btn {
+    font-size: 18px;
+    padding: 14px 40px;
+    margin-top: 18px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -239,7 +285,7 @@ section {
 
 .banner-center-image {
   position: absolute;
-  bottom: 341px;                   
+  bottom: 284px;                   
   left: 50%;                   
   transform: translate(-50%, -50%);
   z-index: 2;                  
@@ -267,7 +313,46 @@ section {
 }
 
 .mobile-menu { 
-  display: none; }
+display: none; }
+
+  @media (max-width: 1024px) {
+
+  .banner {
+    height: 700px; /* меньше чем 932px */
+  }
+
+  .banner-header {
+    padding: 40px 40px;
+    gap: 40px;
+  }
+
+  .nav-links {
+    gap: 30px;
+  }
+
+  .nav-links a {
+    font-size: 20px;
+  }
+
+  .languages a,
+  .languages span {
+    font-size: 16px;
+  }
+
+  .header-right {
+    gap: 30px;
+  }
+
+  .banner-center-image {
+    max-width: 65%;
+    bottom: 170px;
+  }
+
+  .banner-arrow img {
+    width: 70px;
+    height: 70px;
+  }
+}
 
 @media (max-width: 768px) {
   .banner {
@@ -285,7 +370,7 @@ section {
     }
 
   .banner-center-image {
-    bottom: 145px;
+    bottom: 120px;
   }
 
   .banner-arrow img {
@@ -311,13 +396,13 @@ section {
 
   .mobile-menu {
     position: absolute;
-    top: 80px;
+    top: 70px;
     right: 20px;
-    background: rgba(0,0,0,0.9);
-    padding: 20px;
+    background: rgb(54, 38, 28);
+    padding: 15px;
     display: none;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
   }
 
   .mobile-menu a {
@@ -399,18 +484,26 @@ section.collection {
 }
 
 @media (max-width: 1024px) {
+
   .collections-grid {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 360px 360px 360px 360px;
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: repeat(2, 360px); 
     gap: 16px;
   }
 
-  .item-1 { grid-column: 1 / 2; grid-row: 1 / 2; }
-  .item-2 { grid-column: 2 / 3; grid-row: 1 / 2; }
-  .item-3 { grid-column: 1 / 3; grid-row: 2 / 4; }
-  .item-4 { grid-column: 1 / 3; grid-row: 4 / 5; }
+  /* Убираем кастомное позиционирование */
+  .item-1,
+  .item-2,
+  .item-3,
+  .item-4 {
+    grid-column: auto;
+    grid-row: auto;
+  }
 
-  .collection a.collection span { font-size: 36px; }
+  .collection a.collection span {
+    font-size: 36px;
+  }
 }
 
 @media (max-width: 768px) {
