--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -587,7 +587,7 @@ section.collection {
 }
 .services .container {
   background-color: #FAFAFA;
-  padding: 115px 0 60px 0;
+  padding: 60px 0;
 }
 
 .service-row {
@@ -715,7 +715,7 @@ transform: scale(1.1);
   background-color: #fff;
   display: flex;
   max-width: 1440px;       /* ограничиваем ширину блока */
-  margin: 0 auto;           /* центрируем блок */
+  margin: 50px auto;           /* центрируем блок */
   padding: 50px 62px;       /* паддинги слева/справа */
   box-sizing: border-box;
   gap: 149px;               /* расстояние между колонками */
@@ -887,5 +887,228 @@ transform: scale(1.1);
 
   .message-row textarea {
     min-height: 400px; 
+  }
+}
+
+.catalog .container {
+  padding: 50px 78px;
+  background-color: #fff;
+  box-sizing: border-box;
+  max-width: 1440px;
+}
+.catalog .nav-tabs {
+  border-bottom: none;
+  display: flex;
+  gap: 164px;
+  margin-bottom: 83px !important;
+}            
+
+.catalog .nav-link {
+  border: none;
+  background: transparent;
+  color: #575757;
+  font-size: 24px;
+  font-weight: 400;
+  padding: 0;
+  transition: 0.3s;
+}
+
+.catalog .nav-link:hover {
+  color: #f0a500; 
+}
+
+.catalog .nav-link.active {
+  color: #f0a500;
+  background: transparent;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: row;
+  background: #f2f3f0;             
+  border-radius: 14px;
+  overflow: hidden;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+  margin-bottom: 40px;
+  align-items: stretch;
+}
+
+.product-card .card-img-left {
+  flex: 0 0 55%;            
+  object-fit: cover;
+ display: block;
+  width: 55%;
+  height: auto;
+}
+
+.product-card .card-body {
+  flex: 0 0 45%;             
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* кнопка всегда внизу */
+}
+
+.product-card .card-title {
+  font-size: 66px;
+  font-weight: 700;
+  margin-bottom: 53px;
+  color: #1E1E1E;
+}
+
+.product-card .card-text {
+  font-size: 24px;
+  font-weight: 400;
+  margin-bottom: 53px;
+  color: #1E1E1E;
+  opacity: 1;
+  line-height: 1.2;
+}
+
+.product-card .product-price {
+  font-weight: 600;
+  font-size: 24px;
+  color: #5b3a29;
+  margin-bottom: 53px;
+}
+
+.color-dot {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 5px;
+  transition: 0.2s;
+}
+
+.color-dot:hover {
+  transform: scale(1.2);
+  border-color: #5b3a29;
+}
+
+.color-dot.brown { background-color: #5b3a29; }
+.color-dot.beige { background-color: #c8b6a6; }
+.color-dot.dark  { background-color: #2e2e2e; }
+
+.card-body span {
+  font-weight: 400;
+  font-size: 18px;
+  color: #1E1E1E;
+  margin-bottom: 25px;
+  display: inline-flex;
+}
+
+.product-card .btn-primary {
+  background-color: #5b3a29;  
+  border-color: #5b3a29;
+  color: #fff;
+  font-weight: 500;
+  transition: 0.3s;
+  cursor: pointer;
+  outline: none;
+  box-shadow: none;
+  padding: 16px 56px;
+  align-self: flex-start;
+}
+
+.product-card .btn-primary:hover {
+  background-color: #ba7c5d;
+  border-color: #ba7c5d;
+  color: #fff;
+}
+
+@media (max-width: 1024px) {
+
+  .catalog .container {
+    padding: 50px 50px;
+  }
+
+ .catalog .nav-tabs {
+  gap: 120px;
+  margin-bottom: 45px !important;
+}
+
+.product-card .card-title {
+    font-size: 46px;
+    margin-bottom: 30px;
+  }
+
+  .product-card .card-text {
+    font-size: 20px;
+    margin-bottom: 30px;
+  }
+
+  .product-card .product-price {
+    font-size: 22px;
+    margin-bottom: 30px;
+  }
+
+  .color-dot {
+    width: 30px;
+    height: 30px;
+  }
+
+  .product-card .btn-primary {
+    padding: 14px 46px;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .catalog .container {
+    padding: 30px 20px;
+  }
+
+  .catalog .nav-tabs {
+  gap: 20px;
+  margin-bottom: 35px !important;
+}
+
+.catalog .nav-link {
+  font-size: 18px;
+}
+
+  .product-card {
+    flex-direction: column;
+  }
+
+  .product-card .card-img-left {
+    flex: none;
+    width: 100%;
+    aspect-ratio: 4/5;
+  }
+
+  .product-card .card-body {
+    flex: none;
+    width: 100%;
+    padding: 25px;
+  }
+
+  .product-card .card-title {
+    font-size: 32px;
+    margin-bottom: 20px;
+  }
+
+  .product-card .card-text {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  .product-card .product-price {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  .color-dot {
+    width: 35px;
+    height: 35px;
+  }
+
+  .product-card .btn-primary {
+    padding: 14px 32px;
+    font-size: 16px;
   }
 }
