--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1197,12 +1197,12 @@ transform: scale(1.1);
   margin-bottom: 45px !important;
 }
 
-.product-card .card-title {
+.product-card .card-body h5 {
     font-size: 46px;
     margin-bottom: 30px;
   }
 
-  .product-card .card-text {
+  .product-card .card-body p {
     font-size: 20px;
     margin-bottom: 30px;
   }
@@ -1254,12 +1254,12 @@ transform: scale(1.1);
     padding: 25px;
   }
 
-  .product-card .card-title {
+  .product-card .card-body h5 {
     font-size: 32px;
     margin-bottom: 20px;
   }
 
-  .product-card .card-text {
+  .product-card .card-body p {
     font-size: 18px;
     margin-bottom: 20px;
   }
